--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+/* Google Fonts loaded via preconnect in index.html */
 
 @tailwind base;
 @tailwind components;
