--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body {
   overflow-x: hidden;
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   cursor: auto;
